--- a/index.html
+++ b/index.html
@@ -45,17 +45,14 @@
                                     muerte de varias personas.
                                     <br>
                                     Osaka Corp, la empresa de cuerpos sintéticos más grande del mundo, tiene miedo. Si
-                                    las muertes no terminan, cundirá el pánico y empezarán los problemas. Osaka Corp
-                                    necesita a alguien para solucionar ese problema. Necesitan a alguien como
-                                    Kiyoko.
+                                    las muertes no terminan, cundirá el pánico y empezarán los problemas.
                                     <br>
-                                    Kiyoko es una experta fixer que usa a su asistente artificial Sydney para solucionar
-                                    problemas por encargo. Sin embargo, su último trabajo salió mal y ahora Kiyoko está
-                                    expuesta. Ante el constante riesgo de ser capturada por la policía, se ve obligada a
-                                    retirarse. A menos que encuentre una solución para dejar de ser una fugitiva.
+                                    Kiyoko, una experta fixer que usa a su asistente artificial Sydney para solucionar
+                                    problemas por encargo, ha quedado expuesta a raíz de su último trabajo. Necesita
+                                    encontrar una solución para dejar de ser una fugitiva.
                                 </p>
                                 <p class="card-text"><small class="text-muted">Marzo de 2023</small></p>
-                                <a href="#" class="btn btn-dark disabled">Proximamente</a>
+                                <a href="identidad_404.html" class="btn btn-dark">Leer</a>
                             </div>
                         </div>
                     </div>
